# ApiDockerTecnimotors/ApiDockerTecnimotors/Repositories/MaestroClasificado/Model/ModelLlanta.cs
@@ -1,0 +1,22 @@
+﻿namespace ApiDockerTecnimotors.Repositories.MaestroClasificado.Model
+{
+    public class ModelLlanta
+    {
+    }
+    public class TlMedida
+    {
+        public string? Medida { get; set; }
+    }
+    public class TlModelo
+    {
+        public string? Modelo { get; set; }
+    }
+    public class TlMarca
+    {
+        public string? Marca { get; set; }
+    }
+    public class TlCategoria
+    {
+        public string? Categoria { get; set; }
+    }
+}
